# Scion-Control-System

install/: local_setup.sh  setup.sh
install/brain_node/share/brain_node/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/brain_node/share/brain_node/cmake/: brain_nodeConfig.cmake
install/control_node/lib/control_node/: PID_action_client
install/control_node/share/ament_index/resource_index/package_run_dependencies/: control_node
install/control_node/share/control_node/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mediator_node/lib/mediator_node/: pid_action_server
install/mediator_node/share/mediator_node/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_types/include/robot_types/action/detail/: pid__builder.hpp  pid__functions.c  pid__functions.h  pid__rosidl_typesupport_introspection_c.h  pid__rosidl_typesupport_introspection_cpp.hpp  pid__struct.hpp  pid__traits.hpp  pid__type_support.c  pid__type_support.h
install/robot_types/share/ament_index/resource_index/parent_prefix_path/: robot_types
install/robot_types/share/robot_types/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_types/share/robot_types/action/: PID.action
install/robot_types/share/robot_types/cmake/: robot_types__rosidl_generator_cExport.cmake  robot_types__rosidl_typesupport_cExport-noconfig.cmake  robot_types__rosidl_typesupport_cExport.cmake  robot_types__rosidl_typesupport_introspection_cppExport.cmake
log/: latest_build
src/brain_node/: CMakeLists.txt  package.xml
src/brain_node/src/: brain_node.cpp
src/control_interface/: control_interface.hpp
src/control_interface/include/: control_interface.hpp
src/control_node/: CMakeLists.txt  package.xml
src/control_node/src/: control_node.cpp
src/mediator_node/: CMakeLists.txt
src/mediator_node/src/: mediator_node.cpp
src/robot_types/: CMakeLists.txt
